parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TEMPORAL

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> V R BEGIN B END R
Rule 2     V -> PUT VAR AS TYPE V
Rule 3     V -> <empty>
Rule 4     TYPE -> FLOAT
Rule 5     TYPE -> WORD
Rule 6     VAR -> VEC
Rule 7     VAR -> VAR COMA VAR
Rule 8     VALUE -> ID
Rule 9     VALUE -> NUM
Rule 10    VEC -> ID
Rule 11    VEC -> ID PARENTESISI VALUE PARENTESISF
Rule 12    VEC -> ID PARENTESISI VALUE COMA VALUE PARENTESISF
Rule 13    VEC -> ID PARENTESISI VALUE COMA VALUE COMA VALUE PARENTESISF
Rule 14    R -> SUBMETHOD ID B RETURN R
Rule 15    R -> <empty>
Rule 16    B -> CLEAR B
Rule 17    B -> ET ID B
Rule 18    B -> JUMP ID B
Rule 19    B -> TRAVEL ID B
Rule 20    B -> PRINT MENS B
Rule 21    B -> READ B
Rule 22    B -> GIVE EXPR B
Rule 23    B -> IF B
Rule 24    B -> LOOPWHILE B
Rule 25    B -> LOOPFOR B
Rule 26    B -> LOOPDO B
Rule 27    B -> <empty>
Rule 28    READ -> TAKE STRING DOSPUNTOS ID
Rule 29    LOOPFOR -> FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
Rule 30    EXP2 -> TILL EA
Rule 31    EXP1 -> AIGUAL EA
Rule 32    FORID -> FOR ID
Rule 33    LOOPDO -> DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
Rule 34    DO -> ACT
Rule 35    LOOPWHILE -> WHILE LOGIC DOSPUNTOS B ENDWHILST
Rule 36    WHILE -> WHILST
Rule 37    IF -> WHEREVER LOGIC THEN B ELSE B NOWHERE
Rule 38    IF -> WHEREVER LOGIC THEN B NOWHERE
Rule 39    ELSE -> OTHER
Rule 40    LOGIC -> EL
Rule 41    EXPR -> VEC AIGUAL EA
Rule 42    ASGN -> NUM
Rule 43    ASGN -> VEC
Rule 44    ASGN -> MENOS NUM
Rule 45    MENS -> VEC
Rule 46    MENS -> PARENTESISI STRING PARENTESISF
Rule 47    MENS -> PARENTESISI STRING PARENTESISF DOSPUNTOS VEC
Rule 48    EA -> TA
Rule 49    EA -> EA MAS TA
Rule 50    EA -> EA MENOS TA
Rule 51    TA -> FA
Rule 52    TA -> TA MULT FA
Rule 53    TA -> TA DIV FA
Rule 54    FA -> ASGN
Rule 55    FA -> PARENTESISI EA PARENTESISF
Rule 56    EL -> TL
Rule 57    EL -> EL OR TL
Rule 58    EL -> EL AND TL
Rule 59    TL -> FL
Rule 60    TL -> TL COND FL
Rule 61    FL -> ASGN
Rule 62    FL -> PARENTESISI EL PARENTESISF
Rule 63    COND -> IGUAL
Rule 64    COND -> NOIGUAL
Rule 65    COND -> MAYOR
Rule 66    COND -> MENOR
Rule 67    COND -> MAYORI
Rule 68    COND -> MENORI

Terminals, with rules where they appear

ACT                  : 34
AIGUAL               : 31 41
AND                  : 58
AS                   : 2
BEGIN                : 1
CLEAR                : 16
COMA                 : 7 12 13 13
DIV                  : 53
DOSPUNTOS            : 28 29 33 35 47
END                  : 1
ENDWHILST            : 35
ET                   : 17
FLOAT                : 4
FOR                  : 32
GIVE                 : 22
ID                   : 8 10 11 12 13 14 17 18 19 28 29 32
IGUAL                : 63
INCOMING             : 29
JUMP                 : 18
LOOP                 : 33
MAS                  : 49
MAYOR                : 65
MAYORI               : 67
MENOR                : 66
MENORI               : 68
MENOS                : 44 50
MULT                 : 52
NOIGUAL              : 64
NOWHERE              : 37 38
NUM                  : 9 42 44
OR                   : 57
OTHER                : 39
PARENTESISF          : 11 12 13 33 46 47 55 62
PARENTESISI          : 11 12 13 33 46 47 55 62
PRINT                : 20
PUT                  : 2
RETURN               : 14
STRING               : 28 46 47
SUBMETHOD            : 14
TAKE                 : 28
TEMPORAL             : 
THEN                 : 37 38
TILL                 : 30
TRAVEL               : 19
UNTIL                : 33
WHEREVER             : 37 38
WHILST               : 36
WORD                 : 5
error                : 

Nonterminals, with rules where they appear

ASGN                 : 54 61
B                    : 1 14 16 17 18 19 20 21 22 23 24 25 26 29 33 35 37 37 38
COND                 : 60
DO                   : 33
EA                   : 30 31 41 49 50 55
EL                   : 33 40 57 58 62
ELSE                 : 37
EXP1                 : 29
EXP2                 : 29
EXPR                 : 22
FA                   : 51 52 53
FL                   : 59 60
FORID                : 29
IF                   : 23
LOGIC                : 35 37 38
LOOPDO               : 26
LOOPFOR              : 25
LOOPWHILE            : 24
MENS                 : 20
PROGRAMA             : 0
R                    : 1 1 14
READ                 : 21
TA                   : 48 49 50 52 53
TL                   : 56 57 58 60
TYPE                 : 2
V                    : 1 2
VALUE                : 11 12 12 13 13 13
VAR                  : 2 7 7
VEC                  : 6 41 43 45 47
WHILE                : 35

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . V R BEGIN B END R
    (2) V -> . PUT VAR AS TYPE V
    (3) V -> .

    PUT             shift and go to state 3
    SUBMETHOD       reduce using rule 3 (V -> .)
    BEGIN           reduce using rule 3 (V -> .)

    PROGRAMA                       shift and go to state 1
    V                              shift and go to state 2

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> V . R BEGIN B END R
    (14) R -> . SUBMETHOD ID B RETURN R
    (15) R -> .

    SUBMETHOD       shift and go to state 5
    BEGIN           reduce using rule 15 (R -> .)

    R                              shift and go to state 4

state 3

    (2) V -> PUT . VAR AS TYPE V
    (6) VAR -> . VEC
    (7) VAR -> . VAR COMA VAR
    (10) VEC -> . ID
    (11) VEC -> . ID PARENTESISI VALUE PARENTESISF
    (12) VEC -> . ID PARENTESISI VALUE COMA VALUE PARENTESISF
    (13) VEC -> . ID PARENTESISI VALUE COMA VALUE COMA VALUE PARENTESISF

    ID              shift and go to state 8

    VAR                            shift and go to state 6
    VEC                            shift and go to state 7

state 4

    (1) PROGRAMA -> V R . BEGIN B END R

    BEGIN           shift and go to state 9


state 5

    (14) R -> SUBMETHOD . ID B RETURN R

    ID              shift and go to state 10


state 6

    (2) V -> PUT VAR . AS TYPE V
    (7) VAR -> VAR . COMA VAR

    AS              shift and go to state 11
    COMA            shift and go to state 12


state 7

    (6) VAR -> VEC .

    AS              reduce using rule 6 (VAR -> VEC .)
    COMA            reduce using rule 6 (VAR -> VEC .)


state 8

    (10) VEC -> ID .
    (11) VEC -> ID . PARENTESISI VALUE PARENTESISF
    (12) VEC -> ID . PARENTESISI VALUE COMA VALUE PARENTESISF
    (13) VEC -> ID . PARENTESISI VALUE COMA VALUE COMA VALUE PARENTESISF

    AS              reduce using rule 10 (VEC -> ID .)
    COMA            reduce using rule 10 (VEC -> ID .)
    CLEAR           reduce using rule 10 (VEC -> ID .)
    ET              reduce using rule 10 (VEC -> ID .)
    JUMP            reduce using rule 10 (VEC -> ID .)
    TRAVEL          reduce using rule 10 (VEC -> ID .)
    PRINT           reduce using rule 10 (VEC -> ID .)
    GIVE            reduce using rule 10 (VEC -> ID .)
    TAKE            reduce using rule 10 (VEC -> ID .)
    WHEREVER        reduce using rule 10 (VEC -> ID .)
    WHILST          reduce using rule 10 (VEC -> ID .)
    FOR             reduce using rule 10 (VEC -> ID .)
    ACT             reduce using rule 10 (VEC -> ID .)
    END             reduce using rule 10 (VEC -> ID .)
    RETURN          reduce using rule 10 (VEC -> ID .)
    LOOP            reduce using rule 10 (VEC -> ID .)
    NOWHERE         reduce using rule 10 (VEC -> ID .)
    OTHER           reduce using rule 10 (VEC -> ID .)
    ENDWHILST       reduce using rule 10 (VEC -> ID .)
    INCOMING        reduce using rule 10 (VEC -> ID .)
    AIGUAL          reduce using rule 10 (VEC -> ID .)
    IGUAL           reduce using rule 10 (VEC -> ID .)
    NOIGUAL         reduce using rule 10 (VEC -> ID .)
    MAYOR           reduce using rule 10 (VEC -> ID .)
    MENOR           reduce using rule 10 (VEC -> ID .)
    MAYORI          reduce using rule 10 (VEC -> ID .)
    MENORI          reduce using rule 10 (VEC -> ID .)
    OR              reduce using rule 10 (VEC -> ID .)
    AND             reduce using rule 10 (VEC -> ID .)
    THEN            reduce using rule 10 (VEC -> ID .)
    DOSPUNTOS       reduce using rule 10 (VEC -> ID .)
    PARENTESISF     reduce using rule 10 (VEC -> ID .)
    MULT            reduce using rule 10 (VEC -> ID .)
    DIV             reduce using rule 10 (VEC -> ID .)
    MAS             reduce using rule 10 (VEC -> ID .)
    MENOS           reduce using rule 10 (VEC -> ID .)
    TILL            reduce using rule 10 (VEC -> ID .)
    PARENTESISI     shift and go to state 13


state 9

    (1) PROGRAMA -> V R BEGIN . B END R
    (16) B -> . CLEAR B
    (17) B -> . ET ID B
    (18) B -> . JUMP ID B
    (19) B -> . TRAVEL ID B
    (20) B -> . PRINT MENS B
    (21) B -> . READ B
    (22) B -> . GIVE EXPR B
    (23) B -> . IF B
    (24) B -> . LOOPWHILE B
    (25) B -> . LOOPFOR B
    (26) B -> . LOOPDO B
    (27) B -> .
    (28) READ -> . TAKE STRING DOSPUNTOS ID
    (37) IF -> . WHEREVER LOGIC THEN B ELSE B NOWHERE
    (38) IF -> . WHEREVER LOGIC THEN B NOWHERE
    (35) LOOPWHILE -> . WHILE LOGIC DOSPUNTOS B ENDWHILST
    (29) LOOPFOR -> . FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (33) LOOPDO -> . DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
    (36) WHILE -> . WHILST
    (32) FORID -> . FOR ID
    (34) DO -> . ACT

    CLEAR           shift and go to state 15
    ET              shift and go to state 16
    JUMP            shift and go to state 17
    TRAVEL          shift and go to state 18
    PRINT           shift and go to state 19
    GIVE            shift and go to state 21
    END             reduce using rule 27 (B -> .)
    TAKE            shift and go to state 26
    WHEREVER        shift and go to state 27
    WHILST          shift and go to state 31
    FOR             shift and go to state 32
    ACT             shift and go to state 33

    B                              shift and go to state 14
    READ                           shift and go to state 20
    IF                             shift and go to state 22
    LOOPWHILE                      shift and go to state 23
    LOOPFOR                        shift and go to state 24
    LOOPDO                         shift and go to state 25
    WHILE                          shift and go to state 28
    FORID                          shift and go to state 29
    DO                             shift and go to state 30

state 10

    (14) R -> SUBMETHOD ID . B RETURN R
    (16) B -> . CLEAR B
    (17) B -> . ET ID B
    (18) B -> . JUMP ID B
    (19) B -> . TRAVEL ID B
    (20) B -> . PRINT MENS B
    (21) B -> . READ B
    (22) B -> . GIVE EXPR B
    (23) B -> . IF B
    (24) B -> . LOOPWHILE B
    (25) B -> . LOOPFOR B
    (26) B -> . LOOPDO B
    (27) B -> .
    (28) READ -> . TAKE STRING DOSPUNTOS ID
    (37) IF -> . WHEREVER LOGIC THEN B ELSE B NOWHERE
    (38) IF -> . WHEREVER LOGIC THEN B NOWHERE
    (35) LOOPWHILE -> . WHILE LOGIC DOSPUNTOS B ENDWHILST
    (29) LOOPFOR -> . FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (33) LOOPDO -> . DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
    (36) WHILE -> . WHILST
    (32) FORID -> . FOR ID
    (34) DO -> . ACT

    CLEAR           shift and go to state 15
    ET              shift and go to state 16
    JUMP            shift and go to state 17
    TRAVEL          shift and go to state 18
    PRINT           shift and go to state 19
    GIVE            shift and go to state 21
    RETURN          reduce using rule 27 (B -> .)
    TAKE            shift and go to state 26
    WHEREVER        shift and go to state 27
    WHILST          shift and go to state 31
    FOR             shift and go to state 32
    ACT             shift and go to state 33

    B                              shift and go to state 34
    READ                           shift and go to state 20
    IF                             shift and go to state 22
    LOOPWHILE                      shift and go to state 23
    LOOPFOR                        shift and go to state 24
    LOOPDO                         shift and go to state 25
    WHILE                          shift and go to state 28
    FORID                          shift and go to state 29
    DO                             shift and go to state 30

state 11

    (2) V -> PUT VAR AS . TYPE V
    (4) TYPE -> . FLOAT
    (5) TYPE -> . WORD

    FLOAT           shift and go to state 36
    WORD            shift and go to state 37

    TYPE                           shift and go to state 35

state 12

    (7) VAR -> VAR COMA . VAR
    (6) VAR -> . VEC
    (7) VAR -> . VAR COMA VAR
    (10) VEC -> . ID
    (11) VEC -> . ID PARENTESISI VALUE PARENTESISF
    (12) VEC -> . ID PARENTESISI VALUE COMA VALUE PARENTESISF
    (13) VEC -> . ID PARENTESISI VALUE COMA VALUE COMA VALUE PARENTESISF

    ID              shift and go to state 8

    VAR                            shift and go to state 38
    VEC                            shift and go to state 7

state 13

    (11) VEC -> ID PARENTESISI . VALUE PARENTESISF
    (12) VEC -> ID PARENTESISI . VALUE COMA VALUE PARENTESISF
    (13) VEC -> ID PARENTESISI . VALUE COMA VALUE COMA VALUE PARENTESISF
    (8) VALUE -> . ID
    (9) VALUE -> . NUM

    ID              shift and go to state 39
    NUM             shift and go to state 41

    VALUE                          shift and go to state 40

state 14

    (1) PROGRAMA -> V R BEGIN B . END R

    END             shift and go to state 42


state 15

    (16) B -> CLEAR . B
    (16) B -> . CLEAR B
    (17) B -> . ET ID B
    (18) B -> . JUMP ID B
    (19) B -> . TRAVEL ID B
    (20) B -> . PRINT MENS B
    (21) B -> . READ B
    (22) B -> . GIVE EXPR B
    (23) B -> . IF B
    (24) B -> . LOOPWHILE B
    (25) B -> . LOOPFOR B
    (26) B -> . LOOPDO B
    (27) B -> .
    (28) READ -> . TAKE STRING DOSPUNTOS ID
    (37) IF -> . WHEREVER LOGIC THEN B ELSE B NOWHERE
    (38) IF -> . WHEREVER LOGIC THEN B NOWHERE
    (35) LOOPWHILE -> . WHILE LOGIC DOSPUNTOS B ENDWHILST
    (29) LOOPFOR -> . FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (33) LOOPDO -> . DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
    (36) WHILE -> . WHILST
    (32) FORID -> . FOR ID
    (34) DO -> . ACT

    CLEAR           shift and go to state 15
    ET              shift and go to state 16
    JUMP            shift and go to state 17
    TRAVEL          shift and go to state 18
    PRINT           shift and go to state 19
    GIVE            shift and go to state 21
    END             reduce using rule 27 (B -> .)
    RETURN          reduce using rule 27 (B -> .)
    LOOP            reduce using rule 27 (B -> .)
    NOWHERE         reduce using rule 27 (B -> .)
    OTHER           reduce using rule 27 (B -> .)
    ENDWHILST       reduce using rule 27 (B -> .)
    INCOMING        reduce using rule 27 (B -> .)
    TAKE            shift and go to state 26
    WHEREVER        shift and go to state 27
    WHILST          shift and go to state 31
    FOR             shift and go to state 32
    ACT             shift and go to state 33

    B                              shift and go to state 43
    READ                           shift and go to state 20
    IF                             shift and go to state 22
    LOOPWHILE                      shift and go to state 23
    LOOPFOR                        shift and go to state 24
    LOOPDO                         shift and go to state 25
    WHILE                          shift and go to state 28
    FORID                          shift and go to state 29
    DO                             shift and go to state 30

state 16

    (17) B -> ET . ID B

    ID              shift and go to state 44


state 17

    (18) B -> JUMP . ID B

    ID              shift and go to state 45


state 18

    (19) B -> TRAVEL . ID B

    ID              shift and go to state 46


state 19

    (20) B -> PRINT . MENS B
    (45) MENS -> . VEC
    (46) MENS -> . PARENTESISI STRING PARENTESISF
    (47) MENS -> . PARENTESISI STRING PARENTESISF DOSPUNTOS VEC
    (10) VEC -> . ID
    (11) VEC -> . ID PARENTESISI VALUE PARENTESISF
    (12) VEC -> . ID PARENTESISI VALUE COMA VALUE PARENTESISF
    (13) VEC -> . ID PARENTESISI VALUE COMA VALUE COMA VALUE PARENTESISF

    PARENTESISI     shift and go to state 49
    ID              shift and go to state 8

    MENS                           shift and go to state 47
    VEC                            shift and go to state 48

state 20

    (21) B -> READ . B
    (16) B -> . CLEAR B
    (17) B -> . ET ID B
    (18) B -> . JUMP ID B
    (19) B -> . TRAVEL ID B
    (20) B -> . PRINT MENS B
    (21) B -> . READ B
    (22) B -> . GIVE EXPR B
    (23) B -> . IF B
    (24) B -> . LOOPWHILE B
    (25) B -> . LOOPFOR B
    (26) B -> . LOOPDO B
    (27) B -> .
    (28) READ -> . TAKE STRING DOSPUNTOS ID
    (37) IF -> . WHEREVER LOGIC THEN B ELSE B NOWHERE
    (38) IF -> . WHEREVER LOGIC THEN B NOWHERE
    (35) LOOPWHILE -> . WHILE LOGIC DOSPUNTOS B ENDWHILST
    (29) LOOPFOR -> . FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (33) LOOPDO -> . DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
    (36) WHILE -> . WHILST
    (32) FORID -> . FOR ID
    (34) DO -> . ACT

    CLEAR           shift and go to state 15
    ET              shift and go to state 16
    JUMP            shift and go to state 17
    TRAVEL          shift and go to state 18
    PRINT           shift and go to state 19
    GIVE            shift and go to state 21
    END             reduce using rule 27 (B -> .)
    RETURN          reduce using rule 27 (B -> .)
    LOOP            reduce using rule 27 (B -> .)
    NOWHERE         reduce using rule 27 (B -> .)
    OTHER           reduce using rule 27 (B -> .)
    ENDWHILST       reduce using rule 27 (B -> .)
    INCOMING        reduce using rule 27 (B -> .)
    TAKE            shift and go to state 26
    WHEREVER        shift and go to state 27
    WHILST          shift and go to state 31
    FOR             shift and go to state 32
    ACT             shift and go to state 33

    READ                           shift and go to state 20
    B                              shift and go to state 50
    IF                             shift and go to state 22
    LOOPWHILE                      shift and go to state 23
    LOOPFOR                        shift and go to state 24
    LOOPDO                         shift and go to state 25
    WHILE                          shift and go to state 28
    FORID                          shift and go to state 29
    DO                             shift and go to state 30

state 21

    (22) B -> GIVE . EXPR B
    (41) EXPR -> . VEC AIGUAL EA
    (10) VEC -> . ID
    (11) VEC -> . ID PARENTESISI VALUE PARENTESISF
    (12) VEC -> . ID PARENTESISI VALUE COMA VALUE PARENTESISF
    (13) VEC -> . ID PARENTESISI VALUE COMA VALUE COMA VALUE PARENTESISF

    ID              shift and go to state 8

    EXPR                           shift and go to state 51
    VEC                            shift and go to state 52

state 22

    (23) B -> IF . B
    (16) B -> . CLEAR B
    (17) B -> . ET ID B
    (18) B -> . JUMP ID B
    (19) B -> . TRAVEL ID B
    (20) B -> . PRINT MENS B
    (21) B -> . READ B
    (22) B -> . GIVE EXPR B
    (23) B -> . IF B
    (24) B -> . LOOPWHILE B
    (25) B -> . LOOPFOR B
    (26) B -> . LOOPDO B
    (27) B -> .
    (28) READ -> . TAKE STRING DOSPUNTOS ID
    (37) IF -> . WHEREVER LOGIC THEN B ELSE B NOWHERE
    (38) IF -> . WHEREVER LOGIC THEN B NOWHERE
    (35) LOOPWHILE -> . WHILE LOGIC DOSPUNTOS B ENDWHILST
    (29) LOOPFOR -> . FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (33) LOOPDO -> . DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
    (36) WHILE -> . WHILST
    (32) FORID -> . FOR ID
    (34) DO -> . ACT

    CLEAR           shift and go to state 15
    ET              shift and go to state 16
    JUMP            shift and go to state 17
    TRAVEL          shift and go to state 18
    PRINT           shift and go to state 19
    GIVE            shift and go to state 21
    END             reduce using rule 27 (B -> .)
    RETURN          reduce using rule 27 (B -> .)
    LOOP            reduce using rule 27 (B -> .)
    NOWHERE         reduce using rule 27 (B -> .)
    OTHER           reduce using rule 27 (B -> .)
    ENDWHILST       reduce using rule 27 (B -> .)
    INCOMING        reduce using rule 27 (B -> .)
    TAKE            shift and go to state 26
    WHEREVER        shift and go to state 27
    WHILST          shift and go to state 31
    FOR             shift and go to state 32
    ACT             shift and go to state 33

    IF                             shift and go to state 22
    B                              shift and go to state 53
    READ                           shift and go to state 20
    LOOPWHILE                      shift and go to state 23
    LOOPFOR                        shift and go to state 24
    LOOPDO                         shift and go to state 25
    WHILE                          shift and go to state 28
    FORID                          shift and go to state 29
    DO                             shift and go to state 30

state 23

    (24) B -> LOOPWHILE . B
    (16) B -> . CLEAR B
    (17) B -> . ET ID B
    (18) B -> . JUMP ID B
    (19) B -> . TRAVEL ID B
    (20) B -> . PRINT MENS B
    (21) B -> . READ B
    (22) B -> . GIVE EXPR B
    (23) B -> . IF B
    (24) B -> . LOOPWHILE B
    (25) B -> . LOOPFOR B
    (26) B -> . LOOPDO B
    (27) B -> .
    (28) READ -> . TAKE STRING DOSPUNTOS ID
    (37) IF -> . WHEREVER LOGIC THEN B ELSE B NOWHERE
    (38) IF -> . WHEREVER LOGIC THEN B NOWHERE
    (35) LOOPWHILE -> . WHILE LOGIC DOSPUNTOS B ENDWHILST
    (29) LOOPFOR -> . FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (33) LOOPDO -> . DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
    (36) WHILE -> . WHILST
    (32) FORID -> . FOR ID
    (34) DO -> . ACT

    CLEAR           shift and go to state 15
    ET              shift and go to state 16
    JUMP            shift and go to state 17
    TRAVEL          shift and go to state 18
    PRINT           shift and go to state 19
    GIVE            shift and go to state 21
    END             reduce using rule 27 (B -> .)
    RETURN          reduce using rule 27 (B -> .)
    LOOP            reduce using rule 27 (B -> .)
    NOWHERE         reduce using rule 27 (B -> .)
    OTHER           reduce using rule 27 (B -> .)
    ENDWHILST       reduce using rule 27 (B -> .)
    INCOMING        reduce using rule 27 (B -> .)
    TAKE            shift and go to state 26
    WHEREVER        shift and go to state 27
    WHILST          shift and go to state 31
    FOR             shift and go to state 32
    ACT             shift and go to state 33

    LOOPWHILE                      shift and go to state 23
    B                              shift and go to state 54
    READ                           shift and go to state 20
    IF                             shift and go to state 22
    LOOPFOR                        shift and go to state 24
    LOOPDO                         shift and go to state 25
    WHILE                          shift and go to state 28
    FORID                          shift and go to state 29
    DO                             shift and go to state 30

state 24

    (25) B -> LOOPFOR . B
    (16) B -> . CLEAR B
    (17) B -> . ET ID B
    (18) B -> . JUMP ID B
    (19) B -> . TRAVEL ID B
    (20) B -> . PRINT MENS B
    (21) B -> . READ B
    (22) B -> . GIVE EXPR B
    (23) B -> . IF B
    (24) B -> . LOOPWHILE B
    (25) B -> . LOOPFOR B
    (26) B -> . LOOPDO B
    (27) B -> .
    (28) READ -> . TAKE STRING DOSPUNTOS ID
    (37) IF -> . WHEREVER LOGIC THEN B ELSE B NOWHERE
    (38) IF -> . WHEREVER LOGIC THEN B NOWHERE
    (35) LOOPWHILE -> . WHILE LOGIC DOSPUNTOS B ENDWHILST
    (29) LOOPFOR -> . FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (33) LOOPDO -> . DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
    (36) WHILE -> . WHILST
    (32) FORID -> . FOR ID
    (34) DO -> . ACT

    CLEAR           shift and go to state 15
    ET              shift and go to state 16
    JUMP            shift and go to state 17
    TRAVEL          shift and go to state 18
    PRINT           shift and go to state 19
    GIVE            shift and go to state 21
    END             reduce using rule 27 (B -> .)
    RETURN          reduce using rule 27 (B -> .)
    LOOP            reduce using rule 27 (B -> .)
    NOWHERE         reduce using rule 27 (B -> .)
    OTHER           reduce using rule 27 (B -> .)
    ENDWHILST       reduce using rule 27 (B -> .)
    INCOMING        reduce using rule 27 (B -> .)
    TAKE            shift and go to state 26
    WHEREVER        shift and go to state 27
    WHILST          shift and go to state 31
    FOR             shift and go to state 32
    ACT             shift and go to state 33

    LOOPFOR                        shift and go to state 24
    B                              shift and go to state 55
    READ                           shift and go to state 20
    IF                             shift and go to state 22
    LOOPWHILE                      shift and go to state 23
    LOOPDO                         shift and go to state 25
    WHILE                          shift and go to state 28
    FORID                          shift and go to state 29
    DO                             shift and go to state 30

state 25

    (26) B -> LOOPDO . B
    (16) B -> . CLEAR B
    (17) B -> . ET ID B
    (18) B -> . JUMP ID B
    (19) B -> . TRAVEL ID B
    (20) B -> . PRINT MENS B
    (21) B -> . READ B
    (22) B -> . GIVE EXPR B
    (23) B -> . IF B
    (24) B -> . LOOPWHILE B
    (25) B -> . LOOPFOR B
    (26) B -> . LOOPDO B
    (27) B -> .
    (28) READ -> . TAKE STRING DOSPUNTOS ID
    (37) IF -> . WHEREVER LOGIC THEN B ELSE B NOWHERE
    (38) IF -> . WHEREVER LOGIC THEN B NOWHERE
    (35) LOOPWHILE -> . WHILE LOGIC DOSPUNTOS B ENDWHILST
    (29) LOOPFOR -> . FORID EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (33) LOOPDO -> . DO DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF
    (36) WHILE -> . WHILST
    (32) FORID -> . FOR ID
    (34) DO -> . ACT

    CLEAR           shift and go to state 15
    ET              shift and go to state 16
    JUMP            shift and go to state 17
    TRAVEL          shift and go to state 18
    PRINT           shift and go to state 19
    GIVE            shift and go to state 21
    END             reduce using rule 27 (B -> .)
    RETURN          reduce using rule 27 (B -> .)
    LOOP            reduce using rule 27 (B -> .)
    NOWHERE         reduce using rule 27 (B -> .)
    OTHER           reduce using rule 27 (B -> .)
    ENDWHILST       reduce using rule 27 (B -> .)
    INCOMING        reduce using rule 27 (B -> .)
    TAKE            shift and go to state 26
    WHEREVER        shift and go to state 27
    WHILST          shift and go to state 31
    FOR             shift and go to state 32
    ACT             shift and go to state 33

    LOOPDO                         shift and go to state 25
    B                              shift and go to state 56
    READ                           shift and go to state 20
    IF                             shift and go to state 22
    LOOPWHILE                      shift and go to state 23
    LOOPFOR                        shift and go to state 24
    WHILE                          shift and go to state 28
    FORID                          shift and go to state 29
    DO                             shift and go to state 30

state 26

    (28) READ -> TAKE . STRING DOSPUNTOS ID

    STRING          shift and go to state 57


state 27

    (37) IF -> WHEREVER . LOGIC THEN B ELSE B NOWHERE
    (38) IF -> WHEREVER . LOGIC THEN B NOWHERE
    (40) LOGIC -> . EL
    (56) EL -> . TL
    (57) EL -> . EL OR TL
    (58) EL -> . EL AND TL
    (59) TL -> . FL
    (60) TL -> . TL COND FL
    (61) FL -> . ASGN
    (62) FL -> . PARENTESISI EL PARENTESISF
    (42) ASGN -> . NUM
    (43) ASGN -> . VEC
    (44) ASGN -> . MENOS NUM
    (10) VEC -> . ID
    (11) VEC -> . ID PARENTESISI VALUE PARENTESISF
    (12) VEC -> . ID PARENTESISI VALUE COMA VALUE PARENTESISF
    (13) VEC -> . ID PARENTESISI VALUE COMA VALUE COMA VALUE PARENTESISF

    PARENTESISI     shift and go to state 63
    NUM             shift and go to state 64
    MENOS           shift and go to state 66
    ID              shift and go to state 8

    LOGIC                          shift and go to state 58
    EL                             shift and go to state 59
    TL                             shift and go to state 60
    FL                             shift and go to state 61
    ASGN                           shift and go to state 62
    VEC                            shift and go to state 65

state 28

    (35) LOOPWHILE -> WHILE . LOGIC DOSPUNTOS B ENDWHILST
    (40) LOGIC -> . EL
    (56) EL -> . TL
    (57) EL -> . EL OR TL
    (58) EL -> . EL AND TL
    (59) TL -> . FL
    (60) TL -> . TL COND FL
    (61) FL -> . ASGN
    (62) FL -> . PARENTESISI EL PARENTESISF
    (42) ASGN -> . NUM
    (43) ASGN -> . VEC
    (44) ASGN -> . MENOS NUM
    (10) VEC -> . ID
    (11) VEC -> . ID PARENTESISI VALUE PARENTESISF
    (12) VEC -> . ID PARENTESISI VALUE COMA VALUE PARENTESISF
    (13) VEC -> . ID PARENTESISI VALUE COMA VALUE COMA VALUE PARENTESISF

    PARENTESISI     shift and go to state 63
    NUM             shift and go to state 64
    MENOS           shift and go to state 66
    ID              shift and go to state 8

    LOGIC                          shift and go to state 67
    EL                             shift and go to state 59
    TL                             shift and go to state 60
    FL                             shift and go to state 61
    ASGN                           shift and go to state 62
    VEC                            shift and go to state 65

state 29

    (29) LOOPFOR -> FORID . EXP1 EXP2 DOSPUNTOS B INCOMING ID
    (31) EXP1 -> . AIGUAL EA

    AIGUAL          shift and go to state 69

    EXP1                           shift and go to state 68

state 30

    (33) LOOPDO -> DO . DOSPUNTOS B LOOP UNTIL PARENTESISI EL PARENTESISF

    DOSPUNTOS       shift and go to state 70


state 31

    (36) WHILE -> WHILST .

    PARENTESISI     reduce using rule 36 (WHILE -> WHILST .)
    NUM             reduce using rule 36 (WHILE -> WHILST .)
    MENOS           reduce using rule 36 (WHILE -> WHILST .)
    ID              reduce using rule 36 (WHILE -> WHILST .)


state 32

    (32) FORID -> FOR . ID

    ID              shift and go to state 71


state 33

    (34) DO -> ACT .

    DOSPUNTOS       reduce using rule 34 (DO -> ACT .)


state 34

    (14) R -> SUBMETHOD ID B . RETURN R

    RETURN          shift and go to state 72


state 35

    (2) V -> PUT VAR AS TYPE . V
    (2) V -> . PUT VAR AS TYPE V
    (3) V -> .

    PUT             shift and go to state 3
    SUBMETHOD       reduce using rule 3 (V -> .)
    BEGIN           reduce using rule 3 (V -> .)

    V                              shift and go to state 73

state 36

    (4) TYPE -> FLOAT .

    PUT             reduce using rule 4 (TYPE -> FLOAT .)
    SUBMETHOD       reduce using rule 4 (TYPE -> FLOAT .)
    BEGIN           reduce using rule 4 (TYPE -> FLOAT .)


state 37

    (5) TYPE -> WORD .

    PUT             reduce using rule 5 (TYPE -> WORD .)
    SUBMETHOD       reduce using rule 5 (TYPE -> WORD .)
    BEGIN           reduce using rule 5 (TYPE -> WORD .)


state 38

    (7) VAR -> VAR COMA VAR .
    (7) VAR -> VAR . COMA VAR
